--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "NODE_ENV=development nodemon app.js",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
